Closed
Bug 548978
Opened 15 years ago
Closed 15 years ago
[OS/2] build break in gfx/src/thebes
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wuno, Assigned: wuno)
References
Details
Attachments
(1 file, 2 obsolete files)
3.48 KB,
patch
|
jfkthame
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.3a2pre) Gecko/20100226 Minefield/3.7a2pre
Build Identifier:
As reported in the newsgroup after checkin for bug 548608 the OS/2 build breaks in gfxOS2Fonts.cpp, later after a quick if 0ing out the problematic lines in gfxOS2Fonts.cpp it breaks in gfxOS2Platform.cpp.
Reproducible: Always
Assignee | ||
Comment 1•15 years ago
|
||
Until someone has a better idea, here's a quick build fix.
Comment 2•15 years ago
|
||
Comment on attachment 429253 [details] [diff] [review]
quick workaround results in a working browser
> nsTArray<nsString> familyArray;
> ForEachFont(FontCallback, &familyArray);
>
>+
Try bit to add blank lines.
> // To be able to easily search for glyphs in other fonts, append a few good
> // replacement candidates to the list. The best ones are the Unicode fonts that
> // are set up, and if the user was so clever to set up the User Defined fonts,
> // then these are probable candidates, too.
> nsString fontString;
>- gfxPlatform::GetPlatform()->GetPrefFonts("x-unicode", fontString, PR_FALSE);
>- ForEachFont(fontString, NS_LITERAL_CSTRING("x-unicode"), FontCallback, &familyArray);
>+ gfxPlatform::GetPlatform()->GetPrefFonts(gfxAtoms::x_unicode, fontString, PR_FALSE);
>+ ForEachFont(fontString, gfxAtoms::x_unicode, FontCallback, &familyArray);
>+#if 0
> gfxPlatform::GetPlatform()->GetPrefFonts("x-user-def", fontString, PR_FALSE);
> ForEachFont(fontString, NS_LITERAL_CSTRING("x-user-def"), FontCallback, &familyArray);
>
>+#endif
I guess the rest of the code will stop working soon, but until then you can keep the x-user-def stuff working by adding another atom in gfx/thebes/src/gfxAtomList.h. As all.js is still full of x-user-def references, I guess some other platform still uses that, too.
Assignee | ||
Comment 3•15 years ago
|
||
patch as suggested by Peter in comment#2
Attachment #429253 -
Attachment is obsolete: true
Assignee | ||
Updated•15 years ago
|
Assignee | ||
Comment 4•15 years ago
|
||
Assignee: nobody → wuno
Attachment #429363 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #430702 -
Flags: review?(jfkthame)
Updated•15 years ago
|
Attachment #430702 -
Flags: review?(jfkthame) → review+
Comment 5•15 years ago
|
||
Comment on attachment 430702 [details] [diff] [review]
patch updated for bitrot
Looks fine to me.
Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•