Bug 548978: [OS/2] Fix build bustage in gfx/src/thebes/gfxOS2Platform.cpp r=jfkthame